# mcrisp_learning_day

./: pyproject.toml
learning_day/: learning_day.py  learning_day_2.py
