[tool.poetry]
name = "learning-day"
version = "0.1.0"
description = ""
authors = ["Matthew Crisp <matthew.crisp@oda.com>"]
readme = "README.md"
packages = [{include = "learning_day"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.4"
sqlalchemy = "^1.4.46"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
